# base16-palettes

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
src/: lib.rs
src/palettes/: apprentice.rs  atlas.rs  black_metal.rs  brogrammer.rs  brush_trees.rs  circus.rs  classic.rs  codeschool.rs  colors.rs  cupertino.rs  danqing.rs  darcula.rs  darkviolet.rs  default.rs  dracula.rs  equilibrium.rs  espresso.rs  eva.rs  framer.rs  fruit_soda.rs  gigavolt.rs  github.rs  gruvbox.rs  hardcore.rs  heetch.rs  helios.rs  horizon.rs  humanoid.rs  icy.rs  kimber.rs  materia.rs  material.rs  material_vivid.rs  mellow.rs  mexico_light.rs  mod.rs  nebula.rs  nord.rs  nova.rs  one_light.rs  (+28 more)
