[package]
name = "base16-palettes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
categories = ["themes", "no-std", "no-std::no-alloc"]
keywords = ["theme", "themes", "no_std"]
description = "A representation of the Base16 palettes in Rust"
readme = "README.md"
repository = "https://github.com/TylerBloom/base16-palettes"

[features]
apprentice = []
atelier = []
atlas = []
black_metal = []
brogrammer = []
brush_trees = []
circus = []
classic = []
codeschool = []
colors = []
cupertino = []
danqing = []
darcula = []
darkviolet = []
dracula = []
equilibrium = []
espresso = []
eva = []
framer = []
fruit_soda = []
gigavolt = []
github = []
gruvbox = []
hardcore = []
heetch = []
helios = []
horizon = []
humanoid = []
ia = []
icy = []
kimber = []
materia = []
material = []
material_vivid = []
mellow = []
mexico_light = []
nebula = []
nord = []
nova = []
one_light = []
onedark = []
outrun = []
papercolor = []
pasque = []
pinky = []
porple = []
purpledream = []
qualia = []
rebecca = []
rose_pine = []
sagelight = []
sakura = []
sandcastle = []
shades_of_purple = []
silk = []
snazzy = []
solarflare = []
summercamp = []
summerfruit = []
synth_midnight = []
tender = []
twilight = []
unikitty = []
vice = []
windows = []
woodland = []
xcode_dusk = []
zenburn = []

[dependencies]
hex-literal = "0.4.1"
enum_dispatch = "0.3"
